--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>SpaceXData</title>
   <base href="/">
-
+  <link rel="prefetch" href="https://res.cloudinary.com/dacxbqrp3/image/upload/v1532099677/16510243060_42b6169bd4_k_msshaq.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
